prusti/tests/verify/fail/no-annotations/assert-false.rs

fn main() {
    assert!(false);  //~ ERROR assert!(..) statement might not hold
}
